add redis config

--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "1.0.0",
   "description": "Rumah Penghulu Abu Seman - Pillars Educational Website",
   "main": "index.html",
+  "type": "module",
   "scripts": {
-    "dev": "vercel dev",
-    "build": "echo 'Static site - no build needed'",
-    "deploy": "vercel --prod"
+    "dev": "node server.js",
+    "start": "node server.js",
+    "build": "echo 'Static site - no build needed'"
   },
   "dependencies": {
-    "@vercel/kv": "^1.0.1"
+    "@upstash/redis": "^1.35.8",
+    "dotenv": "^17.2.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1"
   },
-  "devDependencies": {},
   "keywords": [
     "heritage",
     "architecture",
@@ -20,4 +23,3 @@
   "author": "",
   "license": "MIT"
 }
-
