--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,3 @@
 {
-  "buildCommand": "npm install",
-  "outputDirectory": ".",
-  "framework": "express",
-  "serverlessFunctionRegion": "auto",
-  "env": [
-    "ADMIN_USERNAME",
-    "ADMIN_PASSWORD",
-    "ALLOWED_ORIGINS",
-    "REDIS_URL",
-    "REDIS_REST_TOKEN"
-  ]
+  "buildCommand": "npm install"
 }
