--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "build": "echo 'Static site - no build needed'"
   },
   "dependencies": {
-    "@upstash/redis": "^1.35.8",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "express-rate-limit": "^8.2.1"
+    "express-rate-limit": "^8.2.1",
+    "redis": "^5.10.0"
   },
   "keywords": [
     "heritage",
