--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
-    "redis": "^5.10.0"
+    "@supabase/supabase-js": "^2.39.0"
   },
   "keywords": [
     "heritage",
