--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,6 @@ PORT=3000
 # CORS Configuration (comma-separated list of allowed origins)
 ALLOWED_ORIGINS=http://localhost:3000,https://yourdomain.com
 
-# Redis Configuration (for Vercel deployment)
-# Get these from Upstash: https://console.upstash.com
-REDIS_URL=redis://default:password@host:port
-REDIS_REST_URL=https://host.upstash.io
-REDIS_REST_TOKEN=your-rest-token
+# Supabase Configuration
+SUPABASE_URL=https://your-supabase-url.supabase.co
+SUPABASE_ANON_KEY=your-supabase-anon-key
